Bug 250371 Caret navigation: Links do not activate when using Ctrl+Arrows (Option+Arrows in OS X) r=aaronleventhal sr=roc